refactored engine to match new domain